Update GitHub Actions to use factory and firmware files only
- Modified release and prerelease workflows to use firmware/ folder instead of separate binaries
- Removed archiving of individual bootloader, partitions, and boot_app0 files
- Releases now contain only factory.bin (complete) and firmware.bin (update) files
- Simplified workflow by removing binary renaming steps

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,17 +25,11 @@ jobs:
         run: pip install --upgrade platformio
       - name: Build PlatformIO Project
         run: pio run
-      - name: Archive built binaries
+      - name: Archive firmware files
         uses: actions/upload-artifact@v4
         with:
-          name: built-binaries-${{ github.sha }}
-          path: .pio/build/*/*.bin
-          if-no-files-found: error
-      - name: Archive bootapp binary
-        uses: actions/upload-artifact@v4
-        with:
-          name: bootapp-binary-${{ github.sha }}
-          path: ~/.platformio/packages/framework-arduinoespressif32/tools/partitions/boot_app0.bin
+          name: firmware-files-${{ github.sha }}
+          path: firmware/
           if-no-files-found: error
       - name: Get version
         id: version_step
@@ -59,18 +53,11 @@ jobs:
           issue-title: "Releasing Nerdminer version ${{ needs.build.outputs.version }}"
           issue-body: "Please approve or deny the release of ${{ needs.build.outputs.version }}."
           exclude-workflow-initiator-as-approver: false
-      - name: Download built binaries
+      - name: Download firmware files
         uses: actions/download-artifact@v4
         with:
-          path: ${{ github.workspace }}/binaries
-          name: built-binaries-${{ github.sha }}
-      - name: Download bootapp binary
-        uses: actions/download-artifact@v4
-        with:
-          path: ${{ github.workspace }}/binaries
-          name: bootapp-binary-${{ github.sha }}
-      - name: Rename built binaries
-        run: find ${{ github.workspace }}/binaries -mindepth 2 -maxdepth 3 -type f -name "*.bin" -exec sh -c 'cp "$0" "${{ github.workspace }}/binaries/$(basename $(dirname "$0"))_$(basename $0)"' {} \;
+          path: ${{ github.workspace }}/
+          name: firmware-files-${{ github.sha }}
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
@@ -80,5 +67,5 @@ jobs:
           generate_release_notes: true
           make_latest: true
           fail_on_unmatched_files: true
-          files: ${{ github.workspace }}/binaries/*.bin
+          files: ${{ github.workspace }}/firmware/**/*.bin
 
