Fix workflow branches to match repository structure
- prerelease.yml now triggers on pre-release branch instead of dev
- release.yml now triggers on main branch instead of master
- Matches develop → pre-release → main workflow

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -3,7 +3,7 @@ name: Nerdminer Pre-Release
 on:
   push:
     branches:
-      - dev
+      - pre-release
 
 jobs:
   build:
@@ -41,7 +41,7 @@ jobs:
       contents: write
       discussions: write
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/pre-release'
     steps:
       - name: Download firmware files
         uses: actions/download-artifact@v4
