Fix firmware file pattern in GitHub Actions workflows
- Changed from firmware/**/*.bin to firmware/*/*.bin for better compatibility
- Resolves issue where files in firmware/dev/ were not being found
- Affects both release and prerelease workflows

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -57,5 +57,5 @@ jobs:
           generate_release_notes: true
           prerelease: true
           fail_on_unmatched_files: true
-          files: ${{ github.workspace }}/firmware/**/*.bin
+          files: ${{ github.workspace }}/firmware/*/*.bin
 
