fix price position TDisplayV1

--- a/platformio.ini
+++ b/platformio.ini
@@ -594,7 +594,7 @@ framework = arduino
 extra_scripts =
     pre:auto_firmware_version.py
     post:post_build_merge.py
-	post:post_build_merge.py 
+board_build.f_cpu = 240000000L 
 monitor_filters = 
 	esp32_exception_decoder
 	time
@@ -613,7 +613,10 @@ build_flags =
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-D NERDMINERV2=1
+	-D CORE_DEBUG_LEVEL=0
+	-D CONFIG_ARDUHAL_LOG_DEFAULT_LEVEL=0
 	;-D DEBUG_MINING=1
+	;To enable I2C mining in future: -D ENABLE_I2C_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender#v1.2
 	bblanchon/ArduinoJson@^6.21.5
