--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [platformio]
 globallib_dir = lib
 
-default_envs =  NerdminerV2, NerdminerV2-T-HMI, wt32-sc01, wt32-sc01-plus, han_m5stack, M5Stick-C, M5Stick-C-Plus2, M5Stick-CPlus, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, Lilygo-T-Embed, ESP32-devKitv1, NerdminerV2-S3-DONGLE, NerdminerV2-S3-GEEK, NerdminerV2-S3-AMOLED, NerdminerV2-S3-AMOLED-TOUCH, NerdminerV2-T-QT, NerdminerV2-T-Display_V1, TTGO-T-Display, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-D0WD-V3-weact, ESP32-C3-super-mini, ESP32-C3-devKitmv1, ESP32-C3-042-OLED, ESP32-S3-042-OLED, ESP32-C3-spotpear, esp32-s3-devkitc1-n32r8
+default_envs =  NerdminerV2, NerdminerV2-T-HMI, wt32-sc01, wt32-sc01-plus, han_m5stack, M5Stick-C, M5Stick-C-Plus2, M5Stick-CPlus, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, ESP32-2432S024, Lilygo-T-Embed, ESP32-devKitv1, NerdminerV2-S3-DONGLE, NerdminerV2-S3-GEEK, NerdminerV2-S3-AMOLED, NerdminerV2-S3-AMOLED-TOUCH, NerdminerV2-T-QT, NerdminerV2-T-Display_V1, TTGO-T-Display, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-D0WD-V3-weact, ESP32-C3-super-mini, ESP32-C3-devKitmv1, ESP32-C3-042-OLED, ESP32-S3-042-OLED, ESP32-C3-spotpear, esp32-s3-devkitc1-n32r8
 
 ; Global configuration for all environments
 [env]
@@ -988,6 +988,62 @@ build_flags =
 	-DTFT_DC=2
 	-DTFT_RST=12
 	-DTFT_BL=21
+	-DETOUCH_CS=33
+	-DTOUCH_CLK=25
+	-DTOUCH_MISO=39
+	-DTOUCH_MOSI=32
+	-DTOUCH_IRQ=36
+	-DLOAD_GLCD=1
+	-DLOAD_FONT2=1
+	-DLOAD_GFXFF=1
+	-DSMOOTH_FONT=1
+	-DSPI_FREQUENCY=55000000
+	-DSPI_READ_FREQUENCY=20000000
+	-DSPI_TOUCH_FREQUENCY=2500000
+	
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender#v1.2
+	bblanchon/ArduinoJson@^6.21.5
+	https://github.com/tzapu/WiFiManager.git#v2.0.17
+	mathertel/oneButton@^2.6.1
+	arduino-libraries/NTPClient@^3.2.1
+	bodmer/TFT_eSPI@^2.5.43
+	https://github.com/achillhasler/TFT_eTouch
+lib_ignore = 
+	HANSOLOminerv2
+
+;--------------------------------------------------------------------
+
+[env:ESP32-2432S024]
+platform = espressif32@6.6.0
+board = esp32dev
+framework = arduino
+extra_scripts =
+    pre:auto_firmware_version.py
+    post:post_build_merge.py
+monitor_speed = 115200
+monitor_filters = 
+	esp32_exception_decoder
+	time	
+	colorize
+	;debug
+upload_speed = 921600
+;build_type = debug
+board_build.partitions = huge_app.csv
+build_flags = 
+	;-DDEBUG_MEMORY=1
+	-D ESP32_2432S028R=1	
+	-DUSER_SETUP_LOADED=1
+	-DILI9341_2_DRIVER=1
+	-DTFT_WIDTH=240
+	-DTFT_HEIGHT=320
+	-DTFT_BACKLIGHT_ON=HIGH
+	-DTFT_MOSI=13
+	-DTFT_SCLK=14
+	-DTFT_CS=15
+	-DTFT_DC=2
+	-DTFT_RST=12
+	-DTFT_BL=27
 	-DETOUCH_CS=33
 	-DTOUCH_CLK=25
 	-DTOUCH_MISO=39
